--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
                 <li>Meet Sarah</li>
                 <li>Digital Marketing Projects I've Worked On</li>
                 <li>Coding Projects I've Worked On</li>
+                <li>Continuing Education</li>
                 <li>Contact Me</li>
             </ul>
         </nav>
     </header>
 </body>
+
+<footer>
+    <div>&copy; 2022 Sarah Touy</div>
+    <!-- Unordered List -->
+    <ul>
+        <!-- List Item Element -->
+        <li>Linked</li>
+        <li>Instagram</li>
+    </ul>
+</footer>
 
 </html>
