added meet sarah

--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
     </header>
 </body>
 
+<!--Header Image-->
+<section class="header-image">
+    <div>
+    </div>
+</section>
+
+<!--Meet Sarah-->
+<section>
+    <h2>Hi, I'm Sarah.</h2>
+    <h3>Mom-boss, Stockton native, entrepreneur, and digital marketing enthusiast by trade.</h3>
+    <p>
+        My journey started in 2014, when I answered a questionable Craigslist ad for a social media marketer. Managing over 10 social media channels, producing content, taking photos, editing and writing my own copy was a whirlwind experience - one that I wouldn’t trade for the world. Since then, I’ve taken many risks, learned a crap ton of lessons, and landed different roles in digital marketing to become the <strong>powerhouse</strong> I am today. I’ve helped companies in various roles like email marketing, online reputation management, search engine optimization, webmaster, content manager, marketing analyst and strategist. I’ve also furthered my knowledge by diving in Alex Cattoni’s copywriting course, Tyler Danae’s Social Media Management training, and UC Davis’ Full Stack Developer Bootcamp. After working for others and realizing the regular 9 to 5 isn’t for me, this mama is shaking off the <strikethrough>imposter syndrome</strikethrough> and diving head first into my entrepreneurial dream. 
+    </p>
+    <p>
+        Fast-forward to today: <strong>My goal is to help your business through website design, social media management, and marketing consultanting.</strong> Let me guide you through the world of digital marketing and ease you through the digital landscape. 
+    </p>
+</section>
+
 <footer>
     <div>&copy; 2022 Sarah Touy</div>
     <!-- Unordered List -->
