added digital marketing projects I've worked on Icon placeholders

--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
     </p>
 </section>
 
+<!--Digital Marketing Projects I've Worked On-->
+<section>
+    <h2>Digital Marketing Projects I've Worked On:</h2>
+</section>
+
+<div>
+
+    <article>
+        <h3>
+            Email Marketing & Content Management
+        </h3>
+        <img src="Assets/Images/Web Icons - Digital Marketing/2.png" alt="" />
+    </article>
+
+    <article>
+        <h3>
+            Social Media Management
+        </h3>
+        <img src="Assets/Images/Web Icons - Digital Marketing/1.png" alt="" />
+    </article>
+
+    <article>
+        <h3>
+            Website & Content Management
+        </h3>
+        <img src="Assets/Images/Web Icons - Digital Marketing/3.png" alt="" />
+    </article>
+
+</div>
+
 <footer>
     <div>&copy; 2022 Sarah Touy</div>
     <!-- Unordered List -->
