added contact section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>
-        Sarah Touy Portfolio
+        💻 Sarah Touy Portfolio
     </title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -22,8 +22,7 @@
                 <li>Meet Sarah</li>
                 <li>Digital Marketing Projects I've Worked On</li>
                 <li>Coding Projects I've Worked On</li>
-                <li>Continuing Education</li>
-                <li>Contact Me</li>
+                <li>Work With Me</li>
             </ul>
         </nav>
     </header>
@@ -77,13 +76,49 @@
 
 </div>
 
+<!--Coding Projects I've Worked On-->
+<section>
+    <h2>Coding Projects I've Worked On:</h2>
+</section>
+
+<div>
+
+    <article>
+        <h3>
+            Run Buddy
+        </h3>
+        <a href="file:///Users/sarahtouy/Desktop/run-buddy/index.html"><img src="Assets/Images/Run Buddy.png" alt="run buddy screen shot of home page" /></a>
+    </article>
+
+    <article>
+        <h3>
+            Horiseo
+        </h3>
+        <a href="file:///Users/sarahtouy/Desktop/challenge_1/index.html"><img src="Assets/Images/Horiseo.png" alt="Horiseo screen shot of home page" /></a> 
+    </article>
+
+</div>
+
+<!--Work with Me-->
+<section>
+    <h2>
+        Want to Work With Me?
+    </h2>
+    <p>Email: <a href="mailto:hello@sarahtouy.com">hello@sarahtouy.com</a></p>
+
+    <div>
+        <a href="/"><img src="Assets/Images/black.jpg" alt="Sarah Touy Logo"/></a>
+    </div>
+</section>
+
+<!-- Footer -->
 <footer>
     <div>&copy; 2022 Sarah Touy</div>
     <!-- Unordered List -->
     <ul>
         <!-- List Item Element -->
-        <li>Linked</li>
-        <li>Instagram</li>
+        <a href="https://www.linkedin.com/in/sarah-touy-412966b5/"><li>Linked</li></a>
+        <a href="https://www.instagram.com/sarahtouy/?hl=en"><li>Instagram</li></a>
     </ul>
 </footer>
 
