added flex box and URLs to nav

--- a/index.html
+++ b/index.html
@@ -5,24 +5,37 @@
 <head>
     <meta charset="UTF-8" />
     <title>
-        💻 Sarah Touy Portfolio
+        🌟 Sarah Touy Portfolio
     </title>
+    <link rel="stylesheet" href="Assets/style.css" />
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
     <header>
         <h1>
-            <a href="/">Sarah Touy</a>
+            <a href="/"><img src="Assets/Images/Website Icons - Digital Marketing Section 3/4.png"></a>
         </h1>
         <nav>
             <!-- Unordered List -->
             <ul>
                 <!-- List Item Element -->
-                <li>Meet Sarah</li>
-                <li>Digital Marketing Projects I've Worked On</li>
-                <li>Coding Projects I've Worked On</li>
-                <li>Work With Me</li>
+                <li>
+                    <!-- Anchor Element -->
+                    <a href=".Indext.html#meet-sarah">Meet Sarah</a>
+                </li>
+
+                <li>
+                    <a href=".index.html#digital-marketing-projects-ive-worked-on">Digital Marketing Projects I've Worked On</a>
+                </li>
+
+                <li>
+                    <a href=".index.html#coding-projects-ive-worked-on">Coding Projects I've Worked On</a> 
+                </li>
+
+                <li>
+                    <a href=".index.html#work-with-me">Work With Me</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -57,22 +70,30 @@
         <h3>
             Email Marketing & Content Management
         </h3>
-        <img src="Assets/Images/Web Icons - Digital Marketing/2.png" alt="" />
+        <img src="Assets/Images/Website Icons - Digital Marketing Section 3/2.png" alt="" />
     </article>
 
     <article>
         <h3>
             Social Media Management
         </h3>
-        <img src="Assets/Images/Web Icons - Digital Marketing/1.png" alt="" />
+        <img src="Assets/Images/Website Icons - Digital Marketing Section 3/1.png" alt="" />
     </article>
 
     <article>
         <h3>
             Website & Content Management
         </h3>
-        <img src="Assets/Images/Web Icons - Digital Marketing/3.png" alt="" />
+        <img src="Assets/Images/Website Icons - Digital Marketing Section 3/3.png" alt="" />
     </article>
+
+    <article>
+        <h3>
+            Search Engine Optimization (SEO)
+        </h3>
+        <img src="Assets/Images/Website Icons - Digital Marketing Section 3/Website Icons - Digital Marketing Section.png" alt="" />
+    </article>
+
 
 </div>
 
