added css styling to footer

--- a/index.html
+++ b/index.html
@@ -126,15 +126,14 @@
         Want to Work With Me?
     </h2>
     <p>Email: <a href="mailto:hello@sarahtouy.com">hello@sarahtouy.com</a></p>
-
-    <div>
-        <a href="/"><img src="Assets/Images/black.jpg" alt="Sarah Touy Logo"/></a>
-    </div>
 </section>
 
 <!-- Footer -->
 <footer>
-    <div>&copy; 2022 Sarah Touy</div>
+    <div>
+        <a href="/"><img src="Assets/Images/Website Icons - Digital Marketing Section 3/4.png" alt="Sarah Touy Logo"/></a>
+    </div>
+    <div class="copyright">&copy; 2022 Sarah Touy</div>
     <!-- Unordered List -->
     <ul>
         <!-- List Item Element -->
