added stylized digital marketing skillset

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <!-- List Item Element -->
                 <li>
                     <!-- Anchor Element -->
-                    <a href=".Indext.html#meet-sarah">Meet Sarah</a>
+                    <a href=".index.html#meet-sarah">Meet Sarah</a>
                 </li>
 
                 <li>
-                    <a href=".index.html#digital-marketing-projects-ive-worked-on">Digital Marketing Projects I've Worked On</a>
+                    <a href=".index.html#digital-marketing-skillset">Digital Marketing Skillset</a>
                 </li>
 
                 <li>
@@ -74,12 +74,15 @@
     </div>
 </section>
 
+<br />
+<br />
+
 <!--Digital Marketing Projects I've Worked On-->
-<section>
-    <h2>Digital Marketing Projects I've Worked On:</h2>
+<section id="digital-marketing-skillset" class="skillset">
+    <h2>Digital Marketing Skillset:</h2>
 </section>
 
-<div>
+<div class="skillsets">
 
     <article>
         <h3>
@@ -113,7 +116,7 @@
 </div>
 
 <!--Coding Projects I've Worked On-->
-<section>
+<section id="coding-projects-ive-worked-on">
     <h2>Coding Projects I've Worked On:</h2>
 </section>
 
