styled reach out section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 </div>
 
 <!--Work with Me-->
-<section>
+<section id="work-with-me" class="reach-out">
     <h2>
         Want to Work With Me?
     </h2>
