added some styling to coding projects sections

--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
     <h2>Coding Projects I've Worked On:</h2>
 </section>
 
-<div>
+<section class="coding-projects">
 
-    <article>
+    <article class="run-buddy">
         <h3>
             Run Buddy
         </h3>
-        <a href="file:///Users/sarahtouy/Desktop/run-buddy/index.html"><img src="Assets/Images/Run Buddy.png" alt="run buddy screen shot of home page" /></a>
+        <a href="file:///Users/sarahtouy/Desktop/run-buddy/index.html"><img class="project-images" src="Assets/Images/Run Buddy.png" alt="run buddy screen shot of home page" /></a>
     </article>
 
     <article>
         <h3>
             Horiseo
         </h3>
-        <a href="file:///Users/sarahtouy/Desktop/challenge_1/index.html"><img src="Assets/Images/Horiseo.png" alt="Horiseo screen shot of home page" /></a> 
+        <a href="file:///Users/sarahtouy/Desktop/challenge_1/index.html"><img class="project-images" src="Assets/Images/Horiseo.png" alt="Horiseo screen shot of home page" /></a> 
     </article>
 
-</div>
+</section>
 
 <!--Work with Me-->
 <section id="work-with-me" class="reach-out">
