added weeb army to coding projects

--- a/index.html
+++ b/index.html
@@ -131,11 +131,17 @@
 
     <article>
         <h3>
+            Weeb Army
+        </h3>
+        <a href="https://desguerra.github.io/weeb-army/"><img class="project-images" src="Assets/Images/Weeb Army.png" /></a>
+    </article>
+
+    <article>
+        <h3>
             Horiseo
         </h3>
         <a href="file:///Users/sarahtouy/Desktop/challenge_1/index.html"><img class="project-images" src="Assets/Images/Horiseo.png" alt="Horiseo screen shot of home page" /></a> 
     </article>
-
 </section>
 
 <!--Work with Me-->
